<resources>
    <string name="app_name">卡托舰长</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="Mine">个人中心</string>
    <string name="bag">我的行囊</string>
    <string name="book">敌人图鉴</string>
    <string name="friends">我的好友</string>
    <string name="post">商店</string>
    <string name="setting">设置</string>
    <string name="manual">操作说明</string>
    <string name="more">更多</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>